# Zotrian

./: .gitignore  DIRECTION.md  README.md  STRUCTURE.md  export.py  inspect_db.py  inspect_items.py  main.py  pdf_parser.py  pyproject.toml  test_sql.py  zotero_db.py  zotrian.json
Papers/: DERIVED.md  how-many-elements-matter.md
zotrian/: __init__.py  cli.py  config.py  exporter.py  gemini_cleaner.py  latex_cleaner.py  note_merger.py  pdf_parser.py  zotero_db.py
