[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zotrian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.27.2.3",
    "watchdog>=6.0.0",
]

[project.scripts]
zotrian = "zotrian.cli:main"

[tool.setuptools]
packages = ["zotrian"]
